adding content boxes

--- a/tapsaff_content.html
+++ b/tapsaff_content.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="tapsaff_style.css">
 </head>
 <body>
-    <div class="heading"></div>
 
-    <div class="tapsameter">
-    <div class="taps_rating"></div>
+
+<div class="wrapper">
+    <div class="content-box">
+        <div class="outer-box" id="top"></div>
+        <div class="outer-box" id="bottom"></div>
+        <div class="heading"></div>
+        <div class="tapsameter">
+        <div class="taps_rating"></div>
+    </div>
 </div>
+
 
 <script src="tapsaff_script.js"></script>
 </body>
