add shirt svg and move temp info

--- a/tapsaff_content.html
+++ b/tapsaff_content.html
@@ -15,13 +15,19 @@
         <div class="outer-box" id="top"></div>
         <div class="outer-box" id="bottom"></div>
         <div class="content-item item--1">
-            <div class="heading"></div>
+            <div class="weatherText"></div>
+            <div class="weatherIcon"></div>
         </div>
         <div class="content-item item--2">
-            
+            <div class="temperature"></div>
         </div>
         <div class="content-item item--3">
-            
+            <div class=""><svg width="100%" height="100%" viewBox="0 0 945 945" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
+                <g transform="matrix(1.94067,0,0,2.16829,-403.518,-6248.35)">
+                    <path d="M337,3278.7L337,3048L214,3048C214,3048 205.253,2920.46 341.543,2920.46L391,2920.46C391,2920.46 387.239,2980.83 451.37,2980.83C515.501,2980.83 511.74,2920.46 511.74,2920.46L561.197,2920.46C697.487,2920.46 688.74,3048 688.74,3048L565.74,3048L565.74,3278.7L337,3278.7Z" style="fill:white;stroke:black;stroke-width:9.53px;"/>
+                </g>
+            </svg>
+            </div>
         </div>
         <div class="content-item item--4">
             <div class="tapsameter">
