add day of week from date functionality

--- a/tapsaff_content.html
+++ b/tapsaff_content.html
@@ -12,7 +12,7 @@
 
 <div class="wrapper">
     <div class="content-box">
-        <div class="outer-box" id="top">Tuesday 28th February</div>
+        <div class="outer-box" id="top"></div>
         <div class="outer-box" id="bottom">London</div>
         <div class="content-item item--1">
             <div class="weatherText"></div>
